runFormatTest(import.meta, ["markdown"], { proseWrap: "always" });
